--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-clock-o"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>Since When?</h4>
-                                        <p>Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist.</p>
+                                        <p>2022.</p>
                                     </div>
                                 </a>
                             </div>
@@ -216,7 +216,7 @@
                         	<div class="col-sm-6">
                                 <div class="skill-bar wow slideInLeft" data-wow-delay="0.2s">
                                     <div class="progress-lebel">
-                                        <h6>Photoshop & Illustrator</h6>
+                                        <h6>Research</h6>
                                     </div>
                                     <div class="progress">
                                       <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
@@ -228,7 +228,7 @@
                             <div class="col-sm-6">
                                 <div class="skill-bar wow slideInRight" data-wow-delay="0.2s">
                                     <div class="progress-lebel">
-                                        <h6>WordPress</h6>
+                                        <h6>Neuroscience</h6>
                                     </div>
                                     <div class="progress">
                                       <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
@@ -240,7 +240,7 @@
                             <div class="col-sm-6">
                                 <div class="skill-bar wow slideInLeft" data-wow-delay="0.4s">
                                     <div class="progress-lebel">
-                                        <h6>Html & Css</h6>
+                                        <h6>Finance</h6>
                                     </div>
                                     <div class="progress">
                                       <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
@@ -252,7 +252,7 @@
                             <div class="col-sm-6">
                                 <div class="skill-bar wow slideInRight" data-wow-delay="0.4s">
                                     <div class="progress-lebel">
-                                        <h6>Javascript</h6>
+                                        <h6>Programming</h6>
                                     </div>
                                     <div class="progress">
                                       <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
@@ -636,7 +636,7 @@
                                                 <img src="img/team/1.jpg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-male"></i>
-                                                    <p>John Doe</p>
+                                                    <p>Mihai Toma</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -651,7 +651,7 @@
                                                 <img src="img/team/1.jpg" alt="title"/>
                                                 <div class="team-hover text-center">
                                                     <i class="fa fa-female"></i>
-                                                    <p>Jane Doe</p>
+                                                    <p>Sofia Gallego</p>
                                                 </div>
                                             </div>
                                         </div>
