--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                                     <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>Who We Are?</h4>
-                                        <p>A team of scientist and venturers.</p>
+                                        <p>A team of researchers with experience in neuroscience, astrophysics,
+                                            and finance.</p>
                                     </div>
                                 </a>
                             </div>
@@ -163,7 +164,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-diamond"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>What We Do?</h4>
-                                        <p>Enhance the human experience through a brain-computer interface framework.</p>
+                                        <p>Engaging gaming experience through brain-computer interface frameworks.</p>
                                     </div>
                                 </a>
                             </div>
@@ -173,7 +174,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-heart"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>Why We Do It?</h4>
-                                        <p>Why not?.</p>
+                                        <p>To enhance cognition and overall human lifestyle.</p>
                                     </div>
                                 </a>
                             </div>
@@ -305,7 +306,7 @@
                 <div class="contact wow bounceInRight" data-wow-delay="0.4s">
                     <div class="container">
                     	<div class="row">
-                            
+
                             <div class="col-sm-6">
                                 <div class="contact-info">
                                     <ul class="contact-address">
